--- a/dst/assets/css/comingsoon.css
+++ b/dst/assets/css/comingsoon.css
@@ -56,7 +56,6 @@
     background: white;
     display:flex;
     justify-content: center;
-    padding-left: 32px; 
     z-index: 10;
     margin-top: -10px;
 }
